Textured ground, orbit controls, bird movement

--- a/index.html
+++ b/index.html
@@ -2,10 +2,18 @@
 <html>
   <head>
     <title>Flappy bird demo</title>
+    <style>
+      body {
+        margin: 0px;
+        padding: 0px;
+      }
+    </style>
   </head>
   <body>
     <script src="//cdnjs.cloudflare.com/ajax/libs/three.js/r68/three.min.js"></script>
+    <script src="dependencies/OrbitControls.js"></script>
     <script src="bird.js"></script>
+    <script src="boid.js"></script>
     <script src="main.js"></script>
   </body>
 </html>
