Boids updated, heavily adapted

--- a/index.html
+++ b/index.html
@@ -1,4 +1,10 @@
 <!DOCTYPE html>
+<!--
+
+Ong Ming Yang 2014
+Adapted from http://threejs.org/examples/#canvas_geometry_birds
+
+-->
 <html>
   <head>
     <title>Flappy bird demo</title>
