Collision control added

--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@ Adapted from http://threejs.org/examples/#canvas_geometry_birds
     <script src="dependencies/OrbitControls.js"></script>
     <script src="bird.js"></script>
     <script src="boid.js"></script>
+    <script src="terrain.js"></script>
     <script src="main.js"></script>
   </body>
 </html>
