--- a/index.html
+++ b/index.html
@@ -1,21 +1,49 @@
 <!DOCTYPE html>
 <!--
-
-Ong Ming Yang 2014
-Adapted from http://threejs.org/examples/#canvas_geometry_birds
-
+  Taming Macaws
+  Adapted from http://threejs.org/examples/#canvas_geometry_birds
+  Ong Ming Yang <me@ongmingyang.com>
+  2014
 -->
 <html>
   <head>
-    <title>Flappy bird demo</title>
+    <title>Taming Macaws</title>
     <style>
       body {
         margin: 0px;
         padding: 0px;
       }
+
+      div {
+        font-family: courier, serif;
+        font-weight: 100;
+        color: #fff;
+        letter-spacing: 1px;
+        text-shadow: 1px 1px 2px #000;
+
+        position: fixed;
+        text-align: right;
+        bottom: 20px;
+        right: 20px;
+      }
     </style>
   </head>
   <body>
+    <div>
+      Ong Ming Yang<br>
+      ongmingyang.com<br>
+      squawk@maca.ws
+    </div>
+    <script>
+      (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+      (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+      m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+      })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
+
+      ga('create', 'UA-30733319-1', 'auto');
+      ga('require', 'linkid', 'linkid.js');
+      ga('send', 'pageview');
+    </script>
     <script src="//cdnjs.cloudflare.com/ajax/libs/three.js/r68/three.min.js"></script>
     <script src="dependencies/OrbitControls.js"></script>
     <script src="bird.js"></script>
