--- a/index.html
+++ b/index.html
@@ -25,13 +25,19 @@
         text-align: right;
         bottom: 20px;
         right: 20px;
+        line-height: 1.2;
       }
+
+    a {
+      color: inherit;
+      text-decoration: none;
+    }
     </style>
   </head>
   <body>
     <div>
       Ong Ming Yang<br>
-      ongmingyang.com<br>
+      <a href="http://ongmingyang.com">ongmingyang.com</a><br>
       squawk@maca.ws
     </div>
     <script>
