Shadows and light

--- a/index.html
+++ b/index.html
@@ -2,12 +2,15 @@
 <!--
   Taming Macaws
   Adapted from http://threejs.org/examples/#canvas_geometry_birds
+  Available on https://github.com/ongmingyang/macaws
+
   Ong Ming Yang <me@ongmingyang.com>
   2014
 -->
 <html>
   <head>
     <title>Taming Macaws</title>
+    <meta name="description" content="WebGL bird demo">
     <style>
       body {
         margin: 0px;
